@@ -1,5 +1,10 @@
 2001-10-04  Alex Graveley  <alex@ximian.com>
 
+	* src/libsoup/soup-socket-unix.c (soup_address_new_cb): Ugg. Don't
+	call waitpid with NOHANG. Avoid zombies. Gain friends.
+
+2001-10-04  Alex Graveley  <alex@ximian.com>
+
 	* src/libsoup/soup-message.c (authorize_handler): Call
 	soup_message_get_header_list.
 
